// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalScreen component renders correctly when it is invisible 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={false}
  visible={false}
/>
`;

exports[`ModalScreen component renders correctly when it is showing MediaScreen 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={false}
  visible={false}
/>
`;

exports[`ModalScreen component renders correctly when it is showing ReplyToTweetScreen 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={false}
  visible={false}
/>
`;

exports[`ModalScreen component renders correctly when it is showing WritePostScreen 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={false}
  visible={false}
/>
`;

exports[`ModalScreen component renders correctly when it is visible 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={false}
  visible={true}
/>
`;
